# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  diff_entries.py  diff_entries_spec.json  files.py  generate_diff.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_generate_diff.py
tests/files/nested/: expected_json.json  file2.yaml
