[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gleb Voropaev <info@gvoropaev.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.black]
max-line-length = 80

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
